fix: modal visible

--- a/css/sections/modal.css
+++ b/css/sections/modal.css
@@ -2,21 +2,21 @@
   opacity: 0;
   pointer-events: none;
   position: fixed;
-  left: calc(50% + var(--scrollbar-width)/2);
+  left: 50%;
   top: 60%;
-  transform: translate(-50%, -50%);
+  transform: translate(calc(-50% + var(--scrollbar-width)*2), -50%);
   background-color: #fff;
   z-index: 100;
   color: #212121;
-  transition: 0.5s ease;
+  transition: 0.3s ease;
 }
 .modal form {
   height: 100%;
 }
 .modal--visible {
-  left: calc(50% - var(--scrollbar-width));
+  left: 50%;
   opacity: 1 !important;
-  transform: translate(calc(-50% - (var(--scrollbar-width))), -50%);
+  transform: translate(-50%, -50%);
   pointer-events: auto;
   top: 50%;
   transition: 0.5s ease;
